--- a/scheduler/Makefile
+++ b/scheduler/Makefile
@@ -2,7 +2,8 @@ BUILDNAME=digital-crimes/dcu-validator-scheduler
 BUILDROOT=$(HOME)/dockerbuild/$(BUILDNAME)
 SHELL=/bin/bash
 
-PRIVDEPS="git@github.secureserver.net:digital-crimes/dcdatabase.git"
+PRIVDEPS="git@github.secureserver.net:digital-crimes/dcdatabase.git" \
+ "git@github.com:gdcorp-infosec/dcu-structured-logging-grpc.git"
 
 .PHONY: prep build
 
