--- a/scheduler/requirements.txt
+++ b/scheduler/requirements.txt
@@ -2,6 +2,7 @@ APScheduler==3.7.0
 certifi==2020.12.5
 chardet==4.0.0
 dcdatabase==1.3
+dcu-structured-logging-grpc==1.0.0
 dnspython==2.1.0
 grpcio==1.36.1
 idna==2.10
