--- a/k8s/ote/deployment.yaml
+++ b/k8s/ote/deployment.yaml
@@ -60,11 +60,18 @@ spec:
             value: jobs
           - name: API_UPDATE_URL
             value: http://api.abuse-api-ote.svc.cluster.local:5000/v1/abuse/tickets
-          - name: API_TOKEN
+          - name: SSO_URL
+            value: https://sso.ote-godaddy.com
+          - name: SSO_USER
             valueFrom:
               secretKeyRef:
-                name: api-token
-                key: token
+                name: abuse-api-user
+                key: username
+          - name: SSO_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: abuse-api-user
+                key: password
           - name: SMDB_USERNAME
             valueFrom:
               secretKeyRef:
