--- a/rest/Makefile
+++ b/rest/Makefile
@@ -40,7 +40,7 @@ test: tools
 .PHONY: testcov
 testcov:
 	@echo "----- Running tests with coverage -----"
-	nosetests tests --with-coverage --cover-erase --cover-package=rest_service
+	nosetests tests --with-coverage --cover-erase --cover-package=rest_service --cover-xml
 
 prep: tools
 	@echo "----- preparing $(IMAGE) build -----"
