--- a/rest/Dockerfile
+++ b/rest/Dockerfile
@@ -11,9 +11,7 @@ COPY ./*.ini ./*.sh ./*.yaml ./*.py /app/
 COPY . /tmp
 RUN chown dcu:dcu -R /app
 
-RUN pip install --compile /tmp/private_deps/PyAuth
-RUN pip install --compile /tmp/private_deps/dcu-structured-logging-flask
-RUN pip install --compile /tmp && rm -rf /tmp/*
+RUN PIP_CONFIG_FILE=/tmp/pip_config/pip.conf pip install --compile /tmp && rm -rf /tmp/*
 RUN apt-get remove -y gcc
 
 ENTRYPOINT ["/app/runserver.sh"]
