--- a/scheduler/Makefile
+++ b/scheduler/Makefile
@@ -2,16 +2,12 @@ BUILDNAME=digital-crimes/dcu-validator-scheduler
 BUILDROOT=$(HOME)/dockerbuild/$(BUILDNAME)
 SHELL=/bin/bash
 
-PRIVDEPS="git@github.secureserver.net:digital-crimes/dcdatabase.git" \
- "git@github.com:gdcorp-infosec/dcu-structured-logging-grpc.git"
-
 .PHONY: prep build
 
 all: env
 
 env:
 	pip install -r test_requirements.txt
-	pip install -r private_pips.txt
 	pip install -r requirements.txt
 
 .PHONY: flake8
@@ -44,23 +40,9 @@ testcov:
 
 prep:
 	@echo "----- preparing $(IMAGE) build -----"
-	# stage pips we will need to install in Docker build
-	mkdir -p $(BUILDROOT)/private_deps && rm -rf $(BUILDROOT)/private_deps/*
-	for entry in $(PRIVDEPS) ; do \
-		IFS=";" read repo revision <<< "$$entry" ; \
-		cd $(BUILDROOT)/private_deps && git clone $$repo ; \
-		if [ "$$revision" != "" ] ; then \
-			name=$$(echo $$repo | awk -F/ '{print $$NF}' | sed -e 's/.git$$//') ; \
-			cd $(BUILDROOT)/private_deps/$$name ; \
-			current_revision=$$(git rev-parse HEAD) ; \
-			echo $$repo HEAD is currently at revision: $$current_revision ; \
-			echo Dependency specified in the Makefile for $$name is set to revision: $$revision ; \
-			echo Reverting to revision: $$revision in $$repo ; \
-			git reset --hard $$revision; \
-		fi ; \
-	done
-	# copy the app code to the build root
+	mkdir -p $(BUILDROOT)
 	cp -rp ./* $(BUILDROOT)
+	cp -rp ~/.pip $(BUILDROOT)/pip_config
 
 build: prep
 	@echo "----- building $(IMAGE):$(TAG) -----"
