--- a/k8s/prod/deployment.yaml
+++ b/k8s/prod/deployment.yaml
@@ -84,3 +84,8 @@ spec:
                 key: password
           - name: DOMAIN_SERVICE
             value: domainservice-rest.abuse-api-prod.svc.cluster.local:8080
+          - name: BROKER_PASS
+            valueFrom:
+              secretKeyRef:
+                name: amqp-shared-creds
+                key: password
