--- a/k8s/dev/deployment.yaml
+++ b/k8s/dev/deployment.yaml
@@ -80,3 +80,5 @@ spec:
               secretKeyRef:
                 name: amqp-shared-creds
                 key: password
+          - name: RESULT_BACKEND_HOSTNAME
+            value: godaddy-service-redis.abuse-api-dev.svc.cluster.local
