--- a/k8s/prod/deployment.yaml
+++ b/k8s/prod/deployment.yaml
@@ -82,3 +82,5 @@ spec:
                 key: password
           - name: RESULT_BACKEND_HOSTNAME
             value: godaddy-service-redis.abuse-api-prod.svc.cluster.local
+          - name: sysenv
+            value: prod
