--- a/scheduler/requirements.txt
+++ b/scheduler/requirements.txt
@@ -1,5 +1,5 @@
 APScheduler==3.7.0
-celery==5.0.5
+celery==5.2.2
 certifi==2020.12.5
 chardet==4.0.0
 dcdatabase==1.3
@@ -7,6 +7,7 @@ dcu-structured-logging-grpc==1.0.0
 dnspython==2.1.0
 grpcio==1.36.1
 idna==2.10
+lxml==4.6.5
 netaddr==0.8.0
 protobuf==3.15.6
 pyaml==20.4.0
