--- a/scheduler/requirements.txt
+++ b/scheduler/requirements.txt
@@ -5,6 +5,7 @@ chardet==4.0.0
 dcdatabase==1.3
 dcu-structured-logging-grpc==1.0.0
 dnspython==2.1.0
+elastic-apm[celery]==6.8.0
 grpcio==1.36.1
 idna==2.10
 lxml==4.6.5
