--- a/k8s/ote/deployment.yaml
+++ b/k8s/ote/deployment.yaml
@@ -94,3 +94,5 @@ spec:
               secretKeyRef:
                 name: apm-access
                 key: secret
+          - name: ELASTIC_APM_ENVIRONMENT
+            value: ote
