--- a/scheduler/requirements.txt
+++ b/scheduler/requirements.txt
@@ -1,7 +1,9 @@
 APScheduler==3.7.0
+beautifulsoup4==4.10.0
 celery==5.2.2
 certifi==2020.12.5
 chardet==4.0.0
+charset-normalizer==2.0.6
 dcdatabase==1.3
 dcu-structured-logging-grpc==1.0.0
 dnspython==2.1.0
