fixing test and adding environment variables

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -23,6 +23,9 @@ spec:
         -
           name: "validator-scheduler"
           image: "docker-dcu-local.artifactory.secureserver.net/dcu-validator-scheduler"
+          envFrom:
+            - configMapRef:
+                name: env-specific-values
           env:
           - name: MIN_PERIOD
             value: "300"
