--- a/k8s/dev/kustomization.yml
+++ b/k8s/dev/kustomization.yml
@@ -10,6 +10,8 @@ images:
   newTag: dev
 - name: docker-dcu-local.artifactory.secureserver.net/dcu-validator/dcu-validator-scheduler
   newTag: dev
+- name: docker-dcu-local.artifactory.secureserver.net/dcu-validator/dcu-validator-scheduler/dcu-validator-scheduler
+  newTag: dev
 
 configMapGenerator:
 - literals:
