--- a/scheduler/requirements.txt
+++ b/scheduler/requirements.txt
@@ -1,13 +1,12 @@
 APScheduler==3.7.0
 beautifulsoup4==4.10.0
-celery==5.2.2
+celery==5.2.6
 certifi==2020.12.5
 chardet==4.0.0
 charset-normalizer==2.0.6
+csetutils>=0.1.7
 dcdatabase==1.3
-dcu-structured-logging-grpc==1.0.0
 dnspython==2.1.0
-elastic-apm[celery]==6.8.0
 grpcio==1.36.1
 idna==2.10
 lxml==4.6.5
@@ -15,7 +14,6 @@ netaddr==0.8.0
 protobuf==3.15.6
 pyaml==20.4.0
 pymongo==3.11.3
-pytz==2021.1
 PyYAML==5.4.1
 redis==3.5.3
 redlock==1.2.0
