--- a/k8s/ote/kustomization.yml
+++ b/k8s/ote/kustomization.yml
@@ -17,7 +17,7 @@ configMapGenerator:
   - DB_HOST=10.22.9.209
   - DB=otephishstory
   - API_UPDATE_URL=http://api.abuse-api-ote.svc.cluster.local:5000/v1/abuse/tickets
-  - SSO_URL=https://sso.ote-godaddy.com
+  - SSO_URL=https://sso.ote-gdcorp.tools
   - DOMAIN_SERVICE=domainservice-rest.abuse-api-ote.svc.cluster.local:8080
   - RESULT_BACKEND_HOSTNAME=godaddy-service-redis.abuse-api-ote.svc.cluster.local
   - ELASTIC_APM_ENVIRONMENT=ote
