--- a/k8s/dev/kustomization.yml
+++ b/k8s/dev/kustomization.yml
@@ -16,7 +16,7 @@ configMapGenerator:
   - DB_USER=devuser
   - DB_HOST=10.36.190.222
   - DB=devphishstory
-  - API_UPDATE_URL=http://api.abuse-api-dev.svc.cluster.local:5000/v1/abuse/tickets
+  - API_UPDATE_URL=https://abuse.api.int.dev-godaddy.com/v1/abuse/tickets
   - SSO_URL=https://sso.dev-gdcorp.tools
   - DOMAIN_SERVICE=domainservice-rest.abuse-api-dev.svc.cluster.local:8080
   - RESULT_BACKEND_HOSTNAME=godaddy-service-redis.abuse-api-dev.svc.cluster.local
