--- a/k8s/test/kustomization.yml
+++ b/k8s/test/kustomization.yml
@@ -16,7 +16,7 @@ configMapGenerator:
   - DB_USER=testuser
   - DB_HOST=10.36.190.222
   - DB=testphishstory
-  - API_UPDATE_URL=http://api.abuse-api-test.svc.cluster.local:5000/v1/abuse/tickets
+  - API_UPDATE_URL=https://abuse.api.int.test-godaddy.com/v1/abuse/tickets
   - SSO_URL=https://sso.gdcorp.tools
   - DOMAIN_SERVICE=domainservice-rest.abuse-api-test.svc.cluster.local:8080
   - RESULT_BACKEND_HOSTNAME=godaddy-service-redis.abuse-api-test.svc.cluster.local
