--- a/scheduler/requirements.txt
+++ b/scheduler/requirements.txt
@@ -4,6 +4,7 @@ celery==5.2.6
 certifi==2020.12.5
 chardet==4.0.0
 charset-normalizer==2.0.6
+cryptography>=38.0.3
 csetutils>=0.2.1
 dcdatabase==1.3
 dnspython==2.1.0
