--- a/scheduler/Makefile
+++ b/scheduler/Makefile
@@ -17,7 +17,7 @@ flake8:
 .PHONY: isort
 isort:
 	@echo "----- Optimizing imports -----"
-	isort --atomic --skip scheduler_service/grpc_stub --skip .venv/ .
+	isort --atomic --skip .venv/ .
 
 .PHONY: tools
 tools: flake8 isort
@@ -25,12 +25,14 @@ tools: flake8 isort
 .PHONY: test
 test: tools
 	@echo "----- Running tests -----"
-	nosetests tests
+	python -m unittest discover tests "*_tests.py"
 
 .PHONY: testcov
 testcov:
 	@echo "----- Running tests with coverage -----"
-	nosetests tests --with-coverage --cover-erase --cover-package=scheduler_service --cover-xml
+	@coverage run --source=scheduler_service -m unittest discover tests "*_tests.py"
+	@coverage xml
+	@coverage report
 
 prep:
 	@echo "----- preparing $(IMAGE) build -----"
