--- a/scheduler/requirements.txt
+++ b/scheduler/requirements.txt
@@ -1,20 +1,15 @@
 APScheduler==3.7.0
 beautifulsoup4==4.10.0
-celery==5.2.6
+celery>=5.2.6
 certifi==2022.12.7
-chardet==4.0.0
-charset-normalizer==2.0.6
 cryptography>=38.0.3
-csetutils>=0.2.1
-dcdatabase==1.3
+csetutils>=1.0.8
+dcdatabase==1.8.0
 dnspython==2.1.0
-grpcio==1.36.1
 idna==2.10
 lxml==4.9.1
 netaddr==0.8.0
-protobuf==3.20.2
 pyaml==20.4.0
-pymongo==3.11.3
 PyYAML==5.4.1
 redis==3.5.3
 redlock==1.2.0
