--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -18,11 +18,11 @@ spec:
     spec:
       imagePullSecrets:
         -
-          name: "dcu-artifactory-creds"
+          name: "artifactory-saas-creds"
       containers:
         -
           name: "validator-scheduler"
-          image: "docker-dcu-local.artifactory.secureserver.net/dcu-validator-scheduler"
+          image: "gdartifactory1.jfrog.io/docker-dcu-local/dcu-validator-scheduler"
           envFrom:
             - configMapRef:
                 name: env-specific-values
