--- a/k8s/dev/kustomization.yml
+++ b/k8s/dev/kustomization.yml
@@ -6,7 +6,7 @@ resources:
 namespace: abuse-api-dev
 
 images:
-- name: docker-dcu-local.artifactory.secureserver.net/dcu-validator-scheduler
+- name: gdartifactory1.jfrog.io/docker-dcu-local/dcu-validator-scheduler
   newTag: dev
 
 configMapGenerator:
